infrastructure/kustomize/overlays/local-catarse/catarse-js-webpack.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: catarse-js-webpack
  name: catarse-js-webpack
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: catarse-js-webpack
  template:
    metadata:
      labels:
        io.kompose.service: catarse-js-webpack
    spec:
      containers:
        - image: catarse-local/webpack-dev-server
          name: catarse
          ports:
            - containerPort: 8080
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: catarse-js-webpack
  name: catarse-js-webpack
spec:
  ports:
  - name: "8080"
    port: 8080
    targetPort: 8080
  selector:
    io.kompose.service: catarse-js-webpack
status:
  loadBalancer: {}
