infrastructure/kustomize/overlays/local-catarse/catarse.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    io.kompose.service: catarse
  name: catarse
spec:
  replicas: 1
  strategy: {}
  selector:
    matchLabels:
      io.kompose.service: catarse
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert -o k83/
        kompose.version: 1.19.0 (f63a961c)
      labels:
        io.kompose.service: catarse
    spec:
      hostAliases:
        - ip: "172.28.128.9"
          hostnames:
          - "local.bundlesites.com"
      containers:
        - args:
            - bundle
            - exec
            - rails
            - server
            - -b
            - 0.0.0.0
          image: catarse-deploy/catarse
          name: catarse
          ports:
            - containerPort: 3000
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    io.kompose.service: catarse
  name: catarse
spec:
  ports:
  - name: "3000"
    port: 3000
    targetPort: 3000
  selector:
    io.kompose.service: catarse
status:
  loadBalancer: {}
