infrastructure/kustomize/overlays/local-catarse/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: catarse
  annotations:
    kubernetes.io/ingress.class: nginx
  labels:
    app: catarse
spec:
  rules:
    - http:
        paths:
          - path: /
            backend:
              serviceName: "catarse"
              servicePort: 3000
          - path: /api
            backend:
              serviceName: "common-api"
              servicePort: 3013
